--- a/src/components/Greetings/greetings.css
+++ b/src/components/Greetings/greetings.css
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
     padding: 100px;
+    margin-top: 200px;
 
     font-family: "Poppins";
     line-height: 4.8rem;
