--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -4,6 +4,12 @@
     right: 0;
     margin: 0;
     padding: 0;
+
+}
+
+.navbar {
+    padding: 0;
+    margin: 0;
 }
 
 .Navbar {
@@ -12,21 +18,29 @@
     left: 0;
     width: 100%;
     z-index: 1000;
-    background-color: #1f1f1f;
+    background-color: #111;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     display: flex;
     align-items: center;
+    flex-direction: row;
     justify-content: space-between;
   }
   
 .Navbar__logo-link {
-    margin: 25px;
+    padding: 25px;
     justify-content: center;
     align-items: center;
 }
 
+.Navbar__logo-link:hover {
+    background-color: #1e1f22;
+    transition: 0.3s ease-in-out;
+}
+
 .Navbar__logo-link a {
-    padding: 20px;
+    color: #efefef;
+    text-decoration: none;
+    padding: 25px;
     font-size: 1.5rem;
     font-weight: 700;
 }
@@ -38,12 +52,19 @@
 }
 
 .Navbar li {
+    padding: 25px;
     list-style: none;
-    padding: 0 20px;
     position: relative;
 }
 
+.Navbar li:hover {
+    color: #efefef;
+    background-color: #1e1f22;
+    transition: 0.3s ease-in-out;
+}
+
 .Navbar li a {
+    color: #efefef;
     padding: 20px;
     text-decoration: none;
     font-size: 1.3rem;
@@ -56,12 +77,7 @@ a {
 }
 
 .Navbar a {
-    border-radius: 25px;
-}
-
-.Navbar a:hover{
-    background-color: #648cb9;
-    transition: 0.3s ease-in-out;
+    padding: auto;
 }
 
 .mobile {
@@ -77,7 +93,7 @@ a {
     align-items: center;
 }
 
-@media screen and (max-width: 908px) {
+@media screen and (max-width: 768px) {
     .Navbar ul {
         display: flex;
         flex-direction: column;
@@ -118,6 +134,7 @@ a {
       }
     
       .mobile i {
+        color: #efefef;
         font-size: 24px;
         cursor: pointer;
       }
