--- a/src/components/Timeline/timeline.css
+++ b/src/components/Timeline/timeline.css
@@ -4,6 +4,18 @@
     box-sizing: border-box;
   }
 
+.body {
+  background-color: #111;
+}
+
+.body h1 {
+  padding-left: 25px;
+  padding-top: 35px;
+  color: #efefef;
+  font-size: 3rem;
+  font-weight: 900;
+}
+
 .container {
     min-height: 100vh;
     width: 100%;
@@ -60,7 +72,15 @@
     letter-spacing: 2px;
   }
 
+  .timeline-content a {
+    color: aqua;
+  }
+
   @media only screen and (min-width: 768px) {
+    .container {
+      width: 100%;
+    }
+
     .timeline:before {
       content: "";
       position: absolute;
