made some bug fixes and improved the "new" navbar.

--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -4,6 +4,7 @@
 }
 
 .About {
+    overflow: hidden;
     background-image: url('bg/bg (2).jpg');
     background-position: center;
     background-size: cover;
