--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,141 +1,105 @@
-* {
-    top: 0;
-    left: 0;
-    right: 0;
-    margin: 0;
-    padding: 0;
-
-}
-
 .navbar {
     padding: 0;
-    margin: 0;
 }
 
-.Navbar {
-    position: fixed;
+nav {
     top: 0;
+    right: 0;
     left: 0;
-    width: 100%;
-    z-index: 1000;
+    z-index: 998;
+    position: fixed;
     background-color: #111;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+nav ul {
+    margin: 0;
+    overflow: hidden;
+    width: 100%;
+    list-style: none;
     display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  
-.Navbar__logo-link {
-    padding: 25px;
     justify-content: center;
     align-items: center;
 }
 
-.Navbar__logo-link:hover {
-    background-color: #1e1f22;
-    transition: 0.3s ease-in-out;
+nav li {
+    height: 80px;
 }
 
-.Navbar__logo-link a {
-    color: #efefef;
+nav a {
+    height: 100%;
+    padding: 0 30px;
     text-decoration: none;
-    padding: 25px;
-    font-size: 1.5rem;
+
+    display: flex;
+    align-items: center;
+    color: #efefef;
+    font-size: 1.2rem;
+    font-weight: 500;
+}
+
+nav a:hover {
+    color: #efefef;
+    background-color: #1e1f22;
+    text-decoration: none;
+}
+
+nav li:first-child {
+    margin-right: auto;
+}
+
+nav li:first-child a {
     font-weight: 700;
 }
 
-.Navbar ul {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.sidebar {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: auto;
+    z-index: 999;
+    color: #1e1f22;
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(10px);
+    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 
-.Navbar li {
-    padding: 25px;
-    list-style: none;
-    position: relative;
+.sidebar li {
+    width: 100%;
 }
 
-.Navbar li:hover {
+.sidebar a {
+    color: #1e1f22;
+    width: 100%;
+}
+
+.sidebar a:hover {
     color: #efefef;
     background-color: #1e1f22;
-    transition: 0.3s ease-in-out;
 }
 
-.Navbar li a {
-    color: #efefef;
-    padding: 20px;
-    text-decoration: none;
-    font-size: 1.3rem;
-    font-weight: 600;
-    transition: 0.3s ease-in-out;
-}
-
-a {
-    color: #efefef;
-}
-
-.Navbar a {
-    padding: auto;
-}
-
-.mobile {
+.menu-button {
     display: none;
-    justify-content: center;
-    align-items: center;
-    padding: 25px;
 }
 
-.mobile i {
-    padding: 25px;
-    cursor: pointer;
-    align-items: center;
+@media (max-width: 768px) {
+    .hideOnMobile {
+        display: none;
+    }
+
+    .menu-button {
+        display: block;
+    }
 }
 
-@media screen and (max-width: 768px) {
-    .Navbar ul {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
-        position: fixed;
-        margin-left: auto;
-        margin-right: 25px;
-        top: 125px;
-        right: -350px;
-        width: 300px;
-        height: 100vh;
-        padding: 40px 0 0 10px;
-        transition: 0.3s ease-in-out;
-
-        background: rgba(48, 48, 48, 0.05);
-        -webkit-backdrop-filter: blur(3px);
-        backdrop-filter: blur(3px);
-        border: 1px solid rgba(255,255,255,0.025);
-      }
-
-      .Navbar li a {
-        display: block;
-        padding: 15px 20px;
-        text-decoration: none;
-        font-size: 1.3rem;
-        font-weight: 600;
-        transition: background-color 0.3s ease-in-out;
-        color: #000;
-      }
-
-      .navbar.active {
-        right: 0;
-      }
-
-      .mobile {
-        display: block;
-      }
-    
-      .mobile i {
-        color: #efefef;
-        font-size: 24px;
-        cursor: pointer;
-      }
-  }
+@media (max-width: 400px) {
+    .sidebar {
+        width: 100%;
+    }
+}
