--- a/src/components/Timeline/timeline.css
+++ b/src/components/Timeline/timeline.css
@@ -2,14 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
 
-.body {
+.Timeline__body {
   background-color: #111;
   overflow: hidden;
 }
 
-.body h1 {
+.Timeline__body h1 {
   padding-left: 25px;
   padding-top: 35px;
   color: #efefef;
@@ -17,7 +17,7 @@
   font-weight: 900;
 }
 
-.container {
+.Timeline__container {
     min-height: 100vh;
     width: 100%;
     display: flex;
@@ -25,7 +25,7 @@
     justify-content: center;
     padding: 100px 0;
     background-color: #111;
-  }
+}
 
   .timeline {
     width: 80%;
@@ -33,12 +33,12 @@
     max-width: 800px;
     margin: 0 auto;    
     position: relative;
-  }
+}
   
   .timeline ul {
     list-style: none;
     margin-right: 60px;
-  }
+}
 
   .timeline ul li {
     margin-right: -60px;
@@ -47,24 +47,24 @@
     color: #efefef;
     border-radius: 10px;
     margin-bottom: 20px;
-  }
+}
 
   .timeline ul li:last-child {
     margin-bottom: 0;
-  }
+}
 
   .timeline-content h1 {
     font-weight: 500;
     font-size: 25px;
     line-height: 30px;
     margin-bottom: 10px;
-  }
+}
 
   .timeline-content p {
     font-size: 16px;
     line-height: 30px;
     font-weight: 300;
-  }
+}
 
   .timeline-content .date {
     font-size: 12px;
@@ -78,7 +78,7 @@
   }
 
   @media only screen and (min-width: 768px) {
-    .container {
+    .Timeline__container {
       width: 100%;
     }
 
