change color of span tag in greetings section

--- a/src/components/Greetings/greetings.css
+++ b/src/components/Greetings/greetings.css
@@ -39,6 +39,10 @@
     font-weight: 800;
 }
 
+.p-container span {
+    color: #79CBCA;
+}
+
 .buttons-container {
     display: flex;
     flex-direction: row;
